update Controller to Reactive using WebClient