@@ -29,19 +29,27 @@ public class UserController {
 
     // using serverWebExchange instead of Request parameter from Spring MVC
     // this is the Reactive way of doing form post
-    MultiValueMap<String, String> map = serverWebExchange.getFormData().toProcessor().block();
+//    MultiValueMap<String, String> map = serverWebExchange.getFormData().toProcessor().block();
+//
+//    Integer limit = new Integer(map.get("limit").get(0));
+//
+//    log.debug("Received limit value: " + limit);
+//
+//    // default if null or zero
+//    if (limit == null || limit == 0) {
+//      log.debug("Setting limit to default of 10");
+//      limit = 10;
+//    }
+//
+//    model.addAttribute("users", apiService.getUsers(limit));
+//    return "userlist";
 
-    Integer limit = new Integer(map.get("limit").get(0));
+    model.addAttribute("users",
+            apiService
+                    .getUsers(serverWebExchange
+                            .getFormData()
+                            .map(data -> Integer.valueOf(data.getFirst("limit")))));
 
-    log.debug("Received limit value: " + limit);
-
-    // default if null or zero
-    if (limit == null || limit == 0) {
-      log.debug("Setting limit to default of 10");
-      limit = 10;
-    }
-
-    model.addAttribute("users", apiService.getUsers(limit));
     return "userlist";
   }
 }
